# ketamine

./: CONTRIBUTING.md  Changelog.md  README.md  stack.yaml
.circleci/: config.yml
dopamine/: bandits.hs  dopamine.cabal  main.hs
dopamine-gym/: dopamine-gym.cabal
dopamine-gym/src/Numeric/Dopamine/Environment/Gym/: Internal.hs
dopamine-gym/src/Numeric/Dopamine/Environment/Gym/ClassicControl/: PendulumV0.hs
dopamine/src/Numeric/: Dopamine.hs
dopamine/src/Numeric/Dopamine/: Agent.hs  Env.hs  Environment.hs  Episode.hs  Exception.hs  Outcome.hs
dopamine/src/Numeric/Dopamine/Environment/: Class.hs  State.hs
dopamine/src/Numeric/Dopamine/Internal/: Env.hs
ketamine/: BUILD  TODO.md  bandits.hs  bench.html  ketamine.cabal  main.hs
ketamine-gym/: ketamine-gym.cabal
ketamine-gym/src/Numeric/Dopamine/Environment/Gym/: Internal.hs
ketamine-gym/src/Numeric/Dopamine/Environment/Gym/ClassicControl/: PendulumV0.hs
ketamine-gym/src/Numeric/Ketamine/Environment/Gym/: Internal.hs
ketamine/bench/: Bench.dump-simpl  Bench.hs
ketamine/src/Numeric/: Ketamine.hs
ketamine/src/Numeric/Ketamine/: Agent.hs  Effect.hs  Environment.hs  Episode.hs  Exception.hs  Log.hs  Outcome.hs  Types.hs
ketamine/src/Numeric/Ketamine/Capability/: Clock.hs  Log.hs  Random.hs  Reader.hs  Resource.hs  State.hs
ketamine/src/Numeric/Ketamine/Capability/Log/: Logfmt.hs  Types.hs
ketamine/src/Numeric/Ketamine/Effect/: Clock.hs  Exception.hs  Log.hs  Proxy.hs  RWS.hs  Random.hs  Reader.hs  Ref.hs  Resource.hs  SelT.hs  State.hs  StateT.hs  Writer.hs  dpllcont.hs  example.hs
ketamine/src/Numeric/Ketamine/Effect/Log/: Logfmt.hs  Types.hs
ketamine/src/Numeric/Ketamine/Effect/Ref/: Unboxed.hs
ketamine/src/Numeric/Ketamine/Log/: Logfmt.hs  Types.hs
ketamine/src/Numeric/Ketamine/Util/: Clock.hs  Exception.hs  Log.hs  Random.hs  Ref.hs  Resource.hs  State.hs
ketamine/src/Numeric/Ketamine/Util/Log/: Logfmt.hs  Types.hs
ketamine/src/Numeric/Ketamine/Util/Ref/: Unboxed.hs
ketamine/test/Test/Hspec/Effect/: RandomSpec.hs
