cabal-version: 1.22

name:           dopamine
version:        0.0.0.1
synopsis:       Reinforcement Learning in Haskell
description:    A very approximate port of the Google RL lib.
category:       reinforcement learning, machine learning, artificial intelligence
homepage:       https://github.com/cmk/dopamine
bug-reports:    https://github.com/cmk/dopamine/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/dopamine

library
  exposed-modules:
      Numeric.Dopamine
      Numeric.Dopamine.Agent
      Numeric.Dopamine.Environment
      Numeric.Dopamine.Environment.Class
      Numeric.Dopamine.Environment.State
      Numeric.Dopamine.Episode
      Numeric.Dopamine.Exception
      Numeric.Dopamine.Outcome
      
  hs-source-dirs:
      src
  default-extensions: MultiParamTypeClasses OverloadedStrings LambdaCase TypeFamilies
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      aeson >=1.0
    , base >=4.9 && <5.0
    , data-default
    , exceptions
    , mmorph
    , monad-loops
    , mtl
    , mwc-random
    , primitive
    , safe-exceptions
    , transformers
    , vector
  default-language: Haskell2010

executable bandits
  main-is: bandits.hs
  build-depends:
      base >=4.9 && <5.0
    , containers
    , dlist
    , dopamine
    , hashable
    , mmorph
    , mtl
    , mwc-random
    , primitive
    , safe-exceptions
    , statistics
    , transformers
    , vector
  default-extensions:
      LambdaCase

