cabal-version: 1.22

name:           ketamine
version:        0.0.0.1
synopsis:       Reinforcement Learning in Haskell
description:    A very approximate port of the Google RL lib.
category:       reinforcement learning, machine learning, artificial intelligence
homepage:       https://github.com/cmk/ketamine
bug-reports:    https://github.com/cmk/ketamine/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/ketamine

library
  exposed-modules:
      Numeric.Ketamine
      Numeric.Ketamine.Agent
      Numeric.Ketamine.Environment
      Numeric.Ketamine.Episode
      Numeric.Ketamine.Exception
      Numeric.Ketamine.Outcome
 
  hs-source-dirs:
      src
  default-extensions: MultiParamTypeClasses OverloadedStrings LambdaCase TypeFamilies
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , data-default
    , exceptions
    , mmorph
    , monad-loops
    , mtl
    , mwc-random
    , pipes
    , pipes-safe
    , primitive
    , safe-exceptions
    , transformers
  default-language: Haskell2010

executable bandits
  main-is: bandits.hs
  build-depends:
      base >=4.9 && <5.0
    , containers
    , dlist
    , ketamine
    , hashable
    , mmorph
    , mtl
    , monad-loops
    , mwc-random
    , primitive
    , safe-exceptions
    , statistics
    , transformers
    , vector
  default-extensions:
      LambdaCase

executable main
  main-is: main.hs
  build-depends:
      base >=4.9 && <5.0
    , containers
    , dlist
    , ketamine
    , hashable
    , mmorph
    , mtl
    , monad-loops
    , mwc-random
    , primitive
    , safe-exceptions
    , statistics
    , transformers
    , vector
  default-extensions:
      LambdaCase
