cabal-version: 1.22

name:           ketamine
version:        0.0.0.1
synopsis:       Reinforcement Learning in Haskell
description:    A very approximate port of the Google RL lib.
category:       reinforcement learning, machine learning, artificial intelligence
homepage:       https://github.com/cmk/ketamine
bug-reports:    https://github.com/cmk/ketamine/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/ketamine

library
  exposed-modules:
      Numeric.Ketamine
      Numeric.Ketamine.Agent
      Numeric.Ketamine.Capability.Clock
      Numeric.Ketamine.Capability.Log
      Numeric.Ketamine.Capability.Log.Logfmt
      Numeric.Ketamine.Capability.Log.Types
      Numeric.Ketamine.Capability.Random
      Numeric.Ketamine.Capability.Reader
      Numeric.Ketamine.Capability.Resource
      Numeric.Ketamine.Capability.State
      Numeric.Ketamine.Environment
      Numeric.Ketamine.Episode
      Numeric.Ketamine.Exception
      Numeric.Ketamine.Outcome
 
  hs-source-dirs:
      src
  default-extensions: MultiParamTypeClasses OverloadedStrings LambdaCase TypeFamilies
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , aeson
    , attoparsec
    , bytestring
    , case-insensitive
    , clock
    , containers
    , data-default
    , errors
    , exceptions
    , fast-logger
    , lens
    , mmorph
    , monad-loops
    , mtl
    , murmur-hash
    , mwc-random
    , pipes
    , pipes-safe
    , primitive
    , profunctors
    , random-fu
    , random-source
    , resourcet
    , rvar
    , safe-exceptions
    , scientific
    , tagged
    , text
    , template-haskell
    , tf-random
    , transformers
    , transformers-lift
    , unordered-containers
    , unix
    , writer-cps-transformers
    , time
  default-language: Haskell2010


executable bandits
  main-is: bandits.hs
  build-depends:
      base >=4.9 && <5.0
    , containers
    , dlist
    , ketamine
    , hashable
    , mmorph
    , mtl
    , monad-loops
    , mwc-random
    , primitive
    , safe-exceptions
    , statistics
    , transformers
    , vector
  default-extensions:
      LambdaCase

executable main
  main-is: main.hs
  build-depends:
      base >=4.9 && <5.0
    , containers
    , dlist
    , ketamine
    , hashable
    , mmorph
    , mtl
    , monad-loops
    , mwc-random
    , primitive
    , safe-exceptions
    , statistics
    , transformers
    , vector
  default-extensions:
      LambdaCase
