cabal-version: 1.22

name:           ketamine
version:        0.0.0.1
synopsis:       Reinforcement Learning in Haskell
description:    A very approximate port of the Google RL lib.
category:       reinforcement learning, machine learning, artificial intelligence
homepage:       https://github.com/cmk/ketamine
bug-reports:    https://github.com/cmk/ketamine/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/ketamine

library
  exposed-modules:
      Numeric.Ketamine
      Numeric.Ketamine.Agent
      Numeric.Ketamine.Environment
      Numeric.Ketamine.Episode
      Numeric.Ketamine.Outcome
      Numeric.Ketamine.Types
      Numeric.Ketamine.Util.Clock
      Numeric.Ketamine.Util.Exception
      Numeric.Ketamine.Util.Log
      Numeric.Ketamine.Util.Log.Logfmt
      Numeric.Ketamine.Util.Log.Types
      Numeric.Ketamine.Util.Random
      Numeric.Ketamine.Util.Ref
      Numeric.Ketamine.Util.State

 
  hs-source-dirs:
      src
  default-extensions: MultiParamTypeClasses OverloadedStrings LambdaCase TypeFamilies
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:
      base >=4.9 && <5.0
    , aeson
    , attoparsec
    , bytestring
    , case-insensitive
    , clock
    , containers
    , data-default
    , errors
    , exceptions
    , fast-logger
    , mmorph
    , microlens
    , microlens-th
    , microlens-ghc
    , monad-loops
    , mtl
    , murmur-hash
    , mwc-random
    , pipes
    , pipes-safe
    , primitive
    , random-fu
    , random-source
    , resourcet
    , rvar
    , safe-exceptions
    , scientific
    , tagged
    , text
    , template-haskell
    , tf-random
    , transformers
    , unordered-containers
    , unliftio
    , unliftio-core
    , unix
    , vector
    , time
  default-language: Haskell2010


executable bandits
  main-is: bandits.hs
  build-depends:
      base >=4.9 && <5.0
    , containers
    , dlist
    , ketamine
    , hashable
    , mmorph
    , mtl
    , monad-loops
    , mwc-random
    , primitive
    , safe-exceptions
    , statistics
    , transformers
    , vector
  default-extensions:
      LambdaCase

executable main
  main-is: main.hs
  build-depends:
      base >=4.9 && <5.0
    , bytestring
    , containers
    , dlist
    , ketamine
    , hashable
    , microlens-th
    , mmorph
    , mtl
    , monad-loops
    , mwc-random
    , primitive
    , safe-exceptions
    , statistics
    , transformers
    , text
    , vector
  default-extensions:
      LambdaCase
